<resources>
    <string name="app_name">Copropre</string>
    <string name="app_desc">Nettoie ta barraque avec tes collocs</string>

    <string name="favorite">Favoris</string>
    <string name="content_description_favorite">Favoris</string>
    <string name="search">Rechercher</string>
    <string name="content_description_search">Rechercher</string>
    <string name="login">Se connecter</string>
    <string name="content_description_login">Se connecter</string>
    <string name="logout">Se déconnecter</string>
    <string name="content_description_logout">Se déconnecter</string>
    <string name="premium">Premium</string>
    <string name="content_description_premium">Acheter l\'application premium et accéder à un service au poil</string>
    <string name="profile">Profil</string>
    <string name="content_description_profile">Accéder à son profil utilisateur</string>
    <string name="shareApp">Partagez l\'app</string>
    <string name="content_description_shareApp">Envoyer un lien de télechargement à vos contacts</string>
    <string name="rateApp">Évaluez l\'app</string>
    <string name="content_description_rateApp">Évaluez l\'application sur le playstore</string>
    <string name="help">Aide</string>
    <string name="content_description_help">Accéder au guide utilisateur</string>
    <string name="modifyHouse">Modifier</string>
    <string name="content_description_modifyHouse">Modifications des paramètres du foyer</string>
    <string name="invitation">Inviter</string>
    <string name="content_description_invitation">Inviter un autre utilisateur pour rejoindre le foyer</string>

    <string name="house_list_add_fab">Create/Join a house</string>
    <string name="house_list_add_house_fab">Create a house</string>
    <string name="house_list_join_house_fab">Join a house</string>

    <string name="house_tab_tasks">Taches</string>
    <string name="house_tab_history">Historique</string>
    <string name="house_tab_balance">Equilibre</string>

    <string name="house_tasks_add_task_fab">Nouvelle tache</string>

    <string name="task_new_select_date">"Select date"</string>

    <!-- Login -->
    <string name="signin_catchphrase">"Pas encore inscris? Inscrivez-vous en cliquant ici:"</string>
    <string name="signin">"S'inscrire"</string>


</resources>