<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mbFavorite"
        android:icon="@drawable/outline_favorite_24"
        android:title="@string/favorite"
        android:contentDescription="@string/content_description_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mbSearch"
        android:icon="@drawable/outline_search_24"
        android:title="@string/search"
        android:contentDescription="@string/content_description_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/mbLogin"
        android:title="@string/login"
        android:contentDescription="@string/content_description_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/mbLogout"
        android:title="@string/logout"
        android:contentDescription="@string/content_description_logout"
        app:showAsAction="never" />

</menu>