<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BackGround">
    <androidx.recyclerview.widget.RecyclerView
        class="androidx.appcompat.app.AlertController$RecycleListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rvHouses"/>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/bCreateHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:layout_above="@id/bJoinHouse"
        android:layout_toStartOf="@id/bAddJoinHouse"
        android:layout_alignParentStart="true"
        android:gravity="center"
        app:icon="@drawable/outline_home_24"
        app:fabSize="mini"
        app:iconGravity="textStart"
        android:visibility="gone"
        android:text="@string/house_list_add_house_fab"
        app:backgroundTint="@color/primary"
        android:contentDescription="@string/house_list_add_house_fab"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/bJoinHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/outline_group_add_24"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:layout_toStartOf="@id/bAddJoinHouse"
        android:layout_alignParentStart="true"
        android:gravity="center"
        app:fabSize="mini"
        app:iconGravity="textStart"
        android:visibility="gone"
        android:text="@string/house_list_join_house_fab"
        app:backgroundTint="@color/primary"
        android:contentDescription="@string/house_list_join_house_fab"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bAddJoinHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/house_list_add_fab"
        app:backgroundTint="@color/primary"
        android:src="@drawable/outline_add_24" />

</RelativeLayout>